--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "@loopback/rest": "^9.3.1",
     "@loopback/rest-explorer": "^3.3.1",
     "@loopback/service-proxy": "^3.2.1",
+    "@types/amqplib": "^0.8.0",
+    "amqplib": "^0.8.0",
     "dotenv": "^10.0.0",
     "loopback-connector-es": "^1.4.1",
     "loopback-connector-esv6": "https://github.com/codeedu/loopback-connector-elastic-search/tarball/master",
