--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
     "@loopback/rest": "^9.3.1",
     "@loopback/rest-explorer": "^3.3.1",
     "@loopback/service-proxy": "^3.2.1",
-    "@types/amqplib": "^0.8.0",
+    "@types/amqp-connection-manager": "^2.0.11",
+    "@types/amqplib": "^0.8.1",
+    "amqp-connection-manager": "^3.2.2",
     "amqplib": "^0.8.0",
     "dotenv": "^10.0.0",
     "loopback-connector-es": "^1.4.1",
