--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "prestart": "npm run rebuild",
     "start": "node -r source-map-support/register .",
     "clean": "lb-clean dist *.tsbuildinfo .eslintcache",
-    "rebuild": "npm run clean && npm run build"
+    "rebuild": "npm run clean && npm run build",
+    "console": "node dist/console.js"
   },
   "repository": {
     "type": "git",
@@ -57,9 +58,11 @@
     "@loopback/service-proxy": "^3.2.1",
     "@types/amqp-connection-manager": "^2.0.11",
     "@types/amqplib": "^0.8.1",
+    "@types/lodash": "^4.14.171",
     "amqp-connection-manager": "^3.2.2",
     "amqplib": "^0.8.0",
     "dotenv": "^10.0.0",
+    "lodash": "^4.17.21",
     "loopback-connector-es": "^1.4.1",
     "loopback-connector-esv6": "https://github.com/codeedu/loopback-connector-elastic-search/tarball/master",
     "tslib": "^2.0.0"
