--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
       - .:/home/node/app
     networks:
       - app-network
-      - rabbitmq_codeflix
+      - fullcycle-rabbitmq-codeflix_codeflix
     depends_on:
       - elasticsearch
 
@@ -41,5 +41,5 @@ services:
 networks:
   app-network:
     driver: bridge
-  rabbitmq_codeflix:
+  fullcycle-rabbitmq-codeflix_codeflix:
     external: true
